# AI_Agents_Special_Topics

./: .gitignore
Agents using Google adk/: README.md
Agents using Google adk/Part-A-Codelab-1-Prototypes-to-Agents/: README.md
E2E_Agentic_Multimodel_App/: README.md  pyproject.toml  settings.py  settings.yaml  settings.yaml.example  utils.py
E2E_Agentic_Multimodel_App/expense_manager_agent/: tools.py
E2E_Google_ADK_Agent/: README.md
E2E_Google_ADK_Agent/agent-4-code-review-assistant/: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt
E2E_Google_ADK_Agent/agent-4-code-review-assistant/agent/: __init__.py
E2E_Google_ADK_Agent/agent-4-code-review-assistant/code_review_assistant/: __init__.py  agent.py  agent_engine_app.py  config.py  constants.py  requirements.txt  services.py  tools.py
E2E_Google_ADK_Agent/agent-4-code-review-assistant/code_review_assistant/sub_agents/: __init__.py
E2E_Google_ADK_Agent/agent-4-code-review-assistant/code_review_assistant/sub_agents/fix_pipeline/: __init__.py  code_fixer.py  fix_synthesizer.py  fix_test_runner.py  fix_validator.py
E2E_Google_ADK_Agent/agent-4-code-review-assistant/code_review_assistant/sub_agents/review_pipeline/: __init__.py  code_analyzer.py  feedback_synthesizer.py  style_checker.py  test_runner.py
E2E_Google_ADK_Agent/agent-4-code-review-assistant/tests/: test_agent_engine.py  test_code_analyzer.py  test_code_review_agent.py
E2E_Google_ADK_Agent/agent-4-code-review-assistant/tests/integration/: test_config.json
MCP_and_A2A_codelab/: README.md
ModernAIWithUnsloth/: Colab1_FullFinetuning_Smollm2_Using_Unsloth_.ipynb  Colab2_Finetuning_SmolLM2_LoRA_Using_Unsloth.ipynb  Colab3_RL_With_PreferredData(DPO_RLHF).ipynb  Colab4_UnSloth_RL_with_GRPO_(Reasoning_Model).ipynb  Colab5_UnSloth_ContinuedPretraining_HindiLang.ipynb  README.md
llm_Metacognitive_reusable_behaviours/: README.md  researchcontent.txt
(+142 files in other folders)
